2002-10-20  Darin Adler  <darin@apple.com>

	Redid my fix. It was just an ordering thing. The image had to already be
	installed as the current image before calling ref(), because in the cached
	case, you get the loading complete callback right then.

        * khtml/rendering/render_image.cpp: (RenderImage::updateFromElement):
	Call deref on the old image later. Basically, instead of moving the ref
	of the new image up, I moved the deref of the old image down.

2002-10-20  Darin Adler  <darin@apple.com>

	Roll out my render_image.cpp change. It was causing a big problem
	getting images from the cache. I need to study further to figure out why.

        * khtml/rendering/render_image.cpp: (RenderImage::updateFromElement):
	Roll back the change.

2002-10-20  David Hyatt  <hyatt@apple.com>

	Rewrite the clearing code for floats.  Rewrote the
	collapsing margin code to really work with floating and
	clearing.  This fixes the right hand side of wired.com.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):
        (RenderFlow::checkClear):
        (RenderFlow::addChild):

2002-10-20  Darin Adler  <darin@apple.com>

	- fixed 3007961 -- Crash in DOM::HTMLImageElementImpl::parseAttribute

        * khtml/rendering/render_image.cpp: (RenderImage::updateFromElement):
	Be sure to call ref on the new image before calling deref on the old
	image. That's because deref on the old image causes a cache flush,
	which might cause the image to go away in certain cases.

2002-10-20  Chris Blumenberg  <cblu@apple.com>

	Fixed possible build failure.

        * kwq/KWQDOMNode.cpp:
        (isImage): remove unused variable.

2002-10-20  Chris Blumenberg  <cblu@apple.com>

	Partial fix for:
	3023814 - contexual menus and dragging doesn't work for some images

	The image map case is still broken because I need to find a way to get the RenderImage for an AREA node. Anyone know how?

        * kwq/KWQDOMNode.cpp: